@@ -4,32 +4,32 @@
 ; License GNU General Public License version 2 or later; see LICENSE.txt, see LICENSE.php
 ; Note : All ini files need to be saved as UTF-8 - No BOM
 
-PLG_SYSTEM_DEBUG_DESC="This plugin provides a variety of system information and assistance for the creation of translation files."
+PLG_DEBUG_XML_DESCRIPTION="This plugin provides a variety of system information and assistance for the creation of translation files."
 CONFIG_LANGUAGE="Language Options"
 
-DEBUG_UNKNOWN_FILE="Unknown file"
+PLG_DEBUG_UNKNOWN_FILE="Unknown file"
+PLG_DEBUG_LANGUAGE_FILES_LOADED="Language Files Loaded"
+PLG_DEBUG_MEMORY_USAGE="Memory Usage"
+PLG_DEBUG_PROFILE_INFORMATION="Profile Information"
+PLG_DEBUG_QUERIES_LOGGED="%d Queries Logged"
+PLG_DEBUG_UNTRANSLATED_STRINGS="Untranslated Strings"
 
-DEBUG_LANGUAGE_FILES_LOADED="Language Files Loaded"
-DEBUG_MEMORY_USAGE="Memory Usage"
-DEBUG_PROFILE_INFORMATION="Profile Information"
-DEBUG_QUERIES_LOGGED="%d Queries Logged"
-DEBUG_UNTRANSLATED_STRINGS="Untranslated Strings"
+PLG_DEBUG_FIELD_ALLOWED_GROUPS_DESC="Optionally restrict users that can see debug information to those in the selected user groups. If none selected, all users see the debug information."
+PLG_DEBUG_FIELD_ALLOWED_GROUPS_LABEL="Allowed Groups"
+PLG_DEBUG_FIELD_LANGUAGE_FILES_DESC="Display a list of the language files that have Joomla has tried to load."
+PLG_DEBUG_FIELD_LANGUAGE_FILES_LABEL="Show Language Files"
+PLG_DEBUG_FIELD_LANGUAGE_STRING_DESC="Display a list of the untranslated language strings."
+PLG_DEBUG_FIELD_LANGUAGE_STRING_LABEL="Show Language String"
+PLG_DEBUG_FIELD_MEMORY_DESC="Display the total memory usage."
+PLG_DEBUG_FIELD_MEMORY_LABEL="Show Memory Usage"
+PLG_DEBUG_FIELD_PROFILING_DESC="Display the profiling waypoints."
+PLG_DEBUG_FIELD_PROFILING_LABEL="Show Profiling"
+PLG_DEBUG_FIELD_QUERIES_DESC="Display a list the queries executed while displaying the page."
+PLG_DEBUG_FIELD_QUERIES_LABEL="Show Queries"
+PLG_DEBUG_FIELD_STRIP_FIRST_DESC="In multi-word strings, always strip the first word."
+PLG_DEBUG_FIELD_STRIP_FIRST_LABEL="Strip First Word"
+PLG_DEBUG_FIELD_STRIP_PREFIX_DESC="Strip words from the beginning of the string. For multiple words, use the format: (word1|word2)"
+PLG_DEBUG_FIELD_STRIP_PREFIX_LABEL="Strip From Start"
+PLG_DEBUG_FIELD_STRIP_SUFFIX_DESC="Strip words from the end of the string. For multiple words, use the format: (word1|word2)"
+PLG_DEBUG_FIELD_STRIP_SUFFIX_LABEL="Strip From End"
 
-DEBUG_FIELD_ALLOWED_GROUPS_DESC="Optionally restrict users that can see debug information to those in the selected user groups. If none selected, all users see the debug information."
-DEBUG_FIELD_ALLOWED_GROUPS_LABEL="Allowed Groups"
-DEBUG_FIELD_LANGUAGE_FILES_DESC="Display a list of the language files that have Joomla has tried to load."
-DEBUG_FIELD_LANGUAGE_FILES_LABEL="Show Language Files"
-DEBUG_FIELD_LANGUAGE_STRING_DESC="Display a list of the untranslated language strings."
-DEBUG_FIELD_LANGUAGE_STRING_LABEL="Show Language String"
-DEBUG_FIELD_MEMORY_DESC="Display the total memory usage."
-DEBUG_FIELD_MEMORY_LABEL="Show Memory Usage"
-DEBUG_FIELD_PROFILING_DESC="Display the profiling waypoints."
-DEBUG_FIELD_PROFILING_LABEL="Show Profiling"
-DEBUG_FIELD_QUERIES_DESC="Display a list the queries executed while displaying the page."
-DEBUG_FIELD_QUERIES_LABEL="Show Queries"
-DEBUG_FIELD_STRIP_FIRST_DESC="In multi-word strings, always strip the first word."
-DEBUG_FIELD_STRIP_FIRST_LABEL="Strip First Word"
-DEBUG_FIELD_STRIP_PREFIX_DESC="Strip words from the beginning of the string. For multiple words, use the format: (word1|word2)"
-DEBUG_FIELD_STRIP_PREFIX_LABEL="Strip From Start"
-DEBUG_FIELD_STRIP_SUFFIX_DESC="Strip words from the end of the string. For multiple words, use the format: (word1|word2)"
-DEBUG_FIELD_STRIP_SUFFIX_LABEL="Strip From End"
