@@ -1,7 +1,7 @@
-; $Id$
+; $Id: en-GB.plg_system_log.ini
 ; Joomla! Project
 ; Copyright (C) 2005 - 2010 Open Source Matters. All rights reserved.
 ; License GNU General Public License version 2 or later; see LICENSE.txt, see LICENSE.php
 ; Note : All ini files need to be saved as UTF-8
 
-PLG_SEF_XML_DESCRIPTION="Adds SEF support to links in the document. It operates directly on the HTML and does not require a special tag."
+PLG_LOG_XML_DESCRIPTION="Provides System Logging"
