@@ -1,7 +1,7 @@
-; @version		$Id$
+; @version		$Id: en-GB.plg_system_remember.ini 14276 2010-01-18 14:20:28Z louis $
 ; @package		Joomla
 ; @subpackage	plgSystemRedirect
 ; @copyright	Copyright (C) 2005 - 2010 Open Source Matters, Inc. All rights reserved.
 ; @license		GNU General Public License version 2 or later; see LICENSE.txt
 
-PLG_REDIRECT_XML_DESCRIPTION="The system redirect plug-in enables the Joomla Redirect system to catch missing pages and redirect users."
+PLG_REMEMBER_XML_DESCRIPTION="Provides remember me functionality"
