@@ -11,7 +11,7 @@
 	<authorEmail>admin@joomla.org</authorEmail>
 	<authorUrl>www.joomla.org</authorUrl>
 	<version>1.5</version>
-	<description>PROVIDES_SYSTEM_LOGGING</description>
+	<description>PLG_LOG_XML_DESCRIPTION</description>
 	<files>
 		<filename
 			plugin="log">log.php</filename>
