@@ -11,7 +11,7 @@
 	<authorEmail>admin@joomla.org</authorEmail>
 	<authorUrl>www.joomla.org</authorUrl>
 	<version>1.6</version>
-	<description>Plg_System_Redirect_Desc</description>
+	<description>PLG_REDIRECT_XML_DESCRIPTION</description>
 	<files>
 		<filename
 			plugin="redirect">redirect.php</filename>
