@@ -11,7 +11,7 @@
 	<authorEmail>admin@joomla.org</authorEmail>
 	<authorUrl>www.joomla.org</authorUrl>
 	<version>1.5</version>
-	<description>DESCPLGSYSTEMSEF</description>
+	<description>PLG_SEF_XML_DESCRIPTION</description>
 	<files>
 		<filename
 			plugin="sef">sef.php</filename>
